--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -19,7 +19,7 @@ spec:
           ports:
             - containerPort: 8080
       imagePullSecrets:
-        - name: mysecretname # Reference to the Docker registry secret
+        - name: regcred # Reference to the Docker registry secret
 ---
 apiVersion: v1
 kind: Service
